<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>UsrManageWidget</class>
 <widget class="QWidget" name="UsrManageWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>453</width>
    <height>693</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <property name="styleSheet">
   <string notr="true">background-color: transparent</string>
  </property>
  <widget class="QTableView" name="tableView">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>411</width>
     <height>291</height>
    </rect>
   </property>
  </widget>
  <widget class="QPushButton" name="pbCancel">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>460</y>
     <width>91</width>
     <height>41</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
    </font>
   </property>
   <property name="focusPolicy">
    <enum>Qt::NoFocus</enum>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: transparent;
border-image: url(:/images/按钮-日.png);</string>
   </property>
   <property name="text">
    <string>返回</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pbDeleteUsr">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>400</y>
     <width>91</width>
     <height>41</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
    </font>
   </property>
   <property name="focusPolicy">
    <enum>Qt::NoFocus</enum>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: transparent;
border-image: url(:/images/按钮-日.png);</string>
   </property>
   <property name="text">
    <string>delete user</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pbChangePswd">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>340</y>
     <width>91</width>
     <height>41</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
    </font>
   </property>
   <property name="focusPolicy">
    <enum>Qt::NoFocus</enum>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: transparent;
border-image: url(:/images/按钮-日.png);</string>
   </property>
   <property name="text">
    <string>ChangPswd</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pbChangeName">
   <property name="geometry">
    <rect>
     <x>120</x>
     <y>340</y>
     <width>91</width>
     <height>41</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
    </font>
   </property>
   <property name="focusPolicy">
    <enum>Qt::NoFocus</enum>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: transparent;
border-image: url(:/images/按钮-日.png);</string>
   </property>
   <property name="text">
    <string>changName</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pbNewUsr">
   <property name="geometry">
    <rect>
     <x>120</x>
     <y>400</y>
     <width>91</width>
     <height>41</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>16</pointsize>
    </font>
   </property>
   <property name="focusPolicy">
    <enum>Qt::NoFocus</enum>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: transparent;
border-image: url(:/images/按钮-日.png);</string>
   </property>
   <property name="text">
    <string>new user</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
